unpackaged/main/default/objects/Feature_Dependency__c/Feature_Dependency__c.object-meta.xml
<CustomObject>
    <description>To link the Attribute Requirement and Feature Dependency</description>
    <label>Feature Dependency</label>
    <nameField>
        <label>Feature Dependency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>