unpackaged/main/default/objects/Feature_Dependency__c/fields/Core_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Core_Attribute__c</fullName>
    <label>Core Attribute</label>
    <referenceTo>Core_Attribute__c</referenceTo>
    <relationshipLabel>Feature Dependencies</relationshipLabel>
    <relationshipName>Feature_Dependencies</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>