unpackaged/main/default/objects/Feature_Dependency__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Information that will support the typical user questions or concerns about the entrance of the data to be entered.</description>
    <inlineHelpText>Please enter any additional information which may help to other users or in future</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>