unpackaged/main/default/objects/Feature_Dependency__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Feature Dependencies</relationshipLabel>
    <relationshipName>Feature_Dependencies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>